--- a/Challenges/C-1/index.html
+++ b/Challenges/C-1/index.html
@@ -82,6 +82,11 @@
       <button onclick="addToCart('Tomato')">Buy</button>
     </div>
     <div class="product">
+      <h2>onion</h2>
+      <p>Fresh onion everyday</p>
+      <button onclick="addToCart('onion')">Buy</button>
+    </div>
+    <div class="product">
       <h2>Potato</h2>
       <p>Fresh potatoes</p>
       <button onclick="addToCart('Potato')">Buy</button>
